...
        android:id="@+id/post_snippet_image"
        android:layout_width="124dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/view_snippet_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="View details"
            android:textColor="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>


</LinearLayout>
...
