...
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:layout_marginTop="0dip"
            android:layout_marginBottom="0dip"/>

        <Button
            android:id="@+id/subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="subscribe"
            android:textColor="@color/black"
...
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/dynamic_list">
    </ListView>

</LinearLayout>

