...
                            android:textStyle="italic"
                            android:typeface="normal" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/sendRequest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="#52bf52"
                        android:text="Request this item"
...
